fix: resolve durationSeconds=30 bug, harden URL handling, fix vocal detection in docker
## Changes

### crbt-community-library
- AudioDurationParser: use URI-based encodeUrl() to percent-encode filename spaces/special
  chars before openConnection(); prevents silent 30s fallback for files with spaces in name
- AudioDurationParser: increase readTimeout 5s -> 30s for large audio files
- RingtoneService: use URI.getPath() (auto-decoded) instead of URL.getPath() (raw encoded)
  in deleteRingtone to pass correct key to MinIO removeObject; add log.warn on catch
- RingtoneService: add SLF4J Logger field

### file-service
- FileService: fix downloadFileByUrl to use java.net.URI instead of deprecated URL;
  validate http/https scheme only; do not swallow parse exceptions; strip query string
  from presigned URLs before splitting bucket/key
- FileService: add bucket whitelist to uploadAudioBytes (prevent caller-controlled bucket)
- FileService: sanitize file extension in buildObjectKey to prevent path traversal sequences
- StaleUploadFileCleanupScheduler: externalize cron to file-service.cleanup.cron property
  (default: 0 0 2 * * * = daily 2AM) instead of hardcoded every-1-minute test schedule

### docker-compose.yml
- Add missing AI_WORKER_HOST env var to crbt-community-library service
  (was defaulting to localhost instead of ai-media-worker container)